--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "youtube-downloader",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "url":"node ./src/downloadURL.js",
+    "playlist":"node ./src/downloadPlaylist.js"
   },
   "repository": {
     "type": "git",
