add clean script to clean videos

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "url":"node ./src/downloadURL.js",
-    "playlist":"node ./src/downloadPlaylist.js"
+    "playlist":"node ./src/downloadPlaylist.js",
+    "clean":"rm ./output/*.mp4"
   },
   "repository": {
     "type": "git",
