--- a/package.json
+++ b/package.json
@@ -1,31 +1,25 @@
 {
   "name": "youtube-downloader",
   "version": "1.0.0",
-  "description": "youtube-downloader",
-  "main": "index.js",
+  "description": "",
+  "main": "main.js",
   "scripts": {
-    "url": "node ./src/downloadURL.js",
-    "playlist": "node ./src/downloadPlaylist.js",
-    "clean": "rm -rf ./output ./dist"
+    "start": "electron .",
+    "watch": "nodemon --watch . --exec npm start"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Prince-Thind/youtube-downloader.git"
+    "url": "git+https://github.com/prince-thind/youtube-downloader.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Prince-Thind/youtube-downloader/issues"
+    "url": "https://github.com/prince-thind/youtube-downloader/issues"
   },
-  "homepage": "https://github.com/Prince-Thind/youtube-downloader#readme",
-  "dependencies": {
-    "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "cli-progress": "^3.10.0",
-    "dialog-node": "^0.2.1",
-    "fluent-ffmpeg": "^2.1.2",
-    "ytdl-core": "^4.10.1",
-    "ytpl": "^2.2.3"
+  "homepage": "https://github.com/prince-thind/youtube-downloader#readme",
+  "devDependencies": {
+    "electron": "^21.1.1",
+    "nodemon": "^2.0.20"
   }
- 
 }
