--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "electron": "^21.1.1",
     "electron-reloader": "^1.2.3",
     "nodemon": "^2.0.20"
+  },
+  "dependencies": {
+    "ytdl-core": "^4.11.2"
   }
 }
