--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/prince-thind/youtube-downloader#readme",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "fluent-ffmpeg": "^2.1.2",
     "nw": "^0.69.1",
     "stream": "^0.0.2",
     "ytdl-core": "^4.11.2"
