add playlist downloading

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fluent-ffmpeg": "^2.1.2",
     "nw": "^0.69.1",
     "stream": "^0.0.2",
-    "ytdl-core": "^4.11.2"
+    "ytdl-core": "^4.11.2",
+    "ytpl": "^2.3.0"
   }
 }
