--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/prince-thind/youtube-downloader#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.5.3"
+    "socket.io": "^4.5.3",
+    "socket.io-client": "^4.5.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
