--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/prince-thind/youtube-downloader#readme",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "express": "^4.18.2",
+    "fluent-ffmpeg": "^2.1.2",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3",
     "ytdl-core": "^4.11.2",
