--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
+    "open": "^8.4.0",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3",
     "ytdl-core": "^4.11.2",
