fix ffmpeg progress bug

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "watch": "nodemon index.js"
+    "watch": "nodemon index.js",
+    "clean": "rm -rf ./output"
   },
   "repository": {
     "type": "git",
