--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "watch": "nodemon index.js",
+    "dev": "node index.js development",
+    "watch": "nodemon index.js development",
     "clean": "rm -rf ./output"
   },
   "repository": {
