--- a/package.json
+++ b/package.json
@@ -7,6 +7,16 @@
     "start": "node index.js",
     "dev": "node index.js development",
     "watch": "nodemon index.js development",
+    "clean-dist": "rm -rf ./dist/*",
+    "bundle": "npm run clean-dist; esbuild --define:process.env.FLUENTFFMPEG_COV=0 index.js --outfile=dist/bundle.js --bundle --platform=node",
+    "build": "npm run bundle; npm run build:linux; npm run build:mac; npm run build:windows",
+    "build:linux": "pkg --targets=linux --output=dist/program-linux dist/bundle.js",
+    "build:mac": "pkg --targets=mac --output=dist/program-mac dist/bundle.js",
+    "build:windows": "pkg --targets=windows --output=dist/program-windows dist/bundle.js",
+    "package": "npm run build;mkdir -p ./pkg; npm run package:linux; npm run package:windows; npm run package:mac",
+    "package:linux": "zip -rq -9 pkg/program-linux.zip ./node_modules ./frontend; zip -ju -9 pkg/program-linux.zip ./dist/program-linux",
+    "package:mac": "zip -rq -9 pkg/program-mac.zip ./node_modules ./frontend; zip -ju -9 pkg/program-mac.zip ./dist/program-mac",
+    "package:windows": "zip -rq -9 pkg/program-windows.zip ./node_modules ./frontend; zip -ju -9 pkg/program-windows.zip ./dist/program-windows.exe",
     "clean": "rm -rf ./output"
   },
   "repository": {
@@ -30,8 +40,10 @@
     "ytpl": "^2.3.0"
   },
   "devDependencies": {
+    "esbuild": "^0.15.12",
     "eslint": "^8.26.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "pkg": "^5.8.0"
   },
   "type": "module"
 }
