Remove windows packaging
sorry windows people, deal with it! windows is pain to work with node things, I intended to supported windows originally but
windows would not have it.

--- a/package.json
+++ b/package.json
@@ -7,16 +7,12 @@
     "start": "node index.js",
     "dev": "node index.js development",
     "watch": "nodemon index.js development",
-    "clean-dist": "rm -rf ./dist/*",
-    "bundle": "npm run clean-dist; esbuild --define:process.env.FLUENTFFMPEG_COV=0 index.js --outfile=dist/bundle.js --bundle --platform=node",
-    "build": "npm run bundle; npm run build:linux; npm run build:mac; npm run build:windows",
+    "clean-build": "rm -rf ./dist ./pkg",
+    "bundle": "npm run clean-build; esbuild --define:process.env.FLUENTFFMPEG_COV=0 index.js --outfile=dist/bundle.js --bundle --platform=node",
+    "build": "npm run bundle; npm run build:linux",
     "build:linux": "pkg --targets=linux --output=dist/program-linux dist/bundle.js",
-    "build:mac": "pkg --targets=mac --output=dist/program-mac dist/bundle.js",
-    "build:windows": "pkg --targets=windows --output=dist/program-windows dist/bundle.js",
-    "package": "npm run build;mkdir -p ./pkg; npm run package:linux; npm run package:windows; npm run package:mac",
-    "package:linux": "zip -rq -9 pkg/program-linux.zip ./node_modules ./frontend; zip -ju -9 pkg/program-linux.zip ./dist/program-linux",
-    "package:mac": "zip -rq -9 pkg/program-mac.zip ./node_modules ./frontend; zip -ju -9 pkg/program-mac.zip ./dist/program-mac",
-    "package:windows": "zip -rq -9 pkg/program-windows.zip ./node_modules ./frontend; zip -ju -9 pkg/program-windows.zip ./dist/program-windows.exe",
+    "package": "npm run build;mkdir -p ./pkg; npm run package:linux;",
+    "package:linux": "zip -rq  pkg/program-linux.zip ./node_modules ./frontend; zip -ju  pkg/program-linux.zip ./dist/program-linux",
     "clean": "rm -rf ./output"
   },
   "repository": {
@@ -32,6 +28,8 @@
   "homepage": "https://github.com/prince-thind/youtube-downloader#readme",
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@ffmpeg-installer/win32-x64": "^4.1.0",
+    "@ffmpeg-installer/linux-x64": "^4.1.0",
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
     "open": "^8.4.0",
